--- a/akak/akak/akak.csproj
+++ b/akak/akak/akak.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="level.txt">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <ItemGroup>
